# screenlight

./: .gitignore  CHANGELOG.md  LICENSE  MACOS_EXTENSION_TICKET_PACK.md  PROJECT_TICKETS.md  README.md  RELEASE_NOTES_0.2.0.md  pyproject.toml
.github/workflows/: ci.yml  release-package.yml
docs/: DEVELOPMENT.md
docs/qa/: MACOS_APP_VALIDATION_LOG.md  MACOS_MANUAL_CHECKLIST.md
src/screenlight/: __init__.py  cli.py  config.py  ipc.py  service.py
src/screenlight/backends/: __init__.py  base.py  macos_backend.py  windows_backend.py
tests/: test_config.py  test_platform_selection.py  test_service_messages.py
